Closed
Bug 1173378
Opened 10 years ago
Closed 10 years ago
crash in mozilla::net::HttpBaseChannel::OverrideSecurityInfo(nsISupports*)
Categories
(Core :: DOM: Service Workers, defect)
Tracking
()
VERIFIED
FIXED
mozilla41
| Tracking | Status | |
|---|---|---|
| firefox41 | --- | verified |
People
(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file, 1 obsolete file)
|
4.39 KB,
patch
|
ehsan.akhgari
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-30490d4c-171c-42c3-8e9d-9ba232150610.
=============================================================
I got this crash when I was testing trained to thrill.
Updated•10 years ago
|
status-firefox41:
--- → affected
| Assignee | ||
Comment 1•10 years ago
|
||
So far I have been unable to reproduce this under the debugger to see exactly what is going on...
Michal, since you asked me to turn this assertions to release asserts in bug 1133763 comment 59, does the fact that this assertion can be hit in practice change your mind? I don't think this is something that we should crash on...
Blocks: 1133763
Flags: needinfo?(michal.novotny)
Comment 2•10 years ago
|
||
Agree, we shouldn't crash on this, but we also shouldn't silently ignore the unexpected state in release build. So what about failing here and keeping just a debug assertion?
Flags: needinfo?(michal.novotny)
| Assignee | ||
Comment 3•10 years ago
|
||
That sounds good to me!
| Assignee | ||
Comment 4•10 years ago
|
||
| Assignee | ||
Updated•10 years ago
|
Attachment #8621695 -
Flags: review?(michal.novotny)
| Assignee | ||
Comment 6•10 years ago
|
||
Comment on attachment 8622089 [details] [diff] [review]
patch
Review of attachment 8622089 [details] [diff] [review]:
-----------------------------------------------------------------
Sure, looks sane!
Attachment #8622089 -
Flags: review?(ehsan) → review+
| Assignee | ||
Updated•10 years ago
|
Attachment #8621695 -
Attachment is obsolete: true
Attachment #8621695 -
Flags: review?(michal.novotny)
Comment 8•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
Comment 9•10 years ago
|
||
Socorro [1] shows zero crashes over the past 4 weeks in builds that contain the fix.
[1] - https://crash-stats.mozilla.com/report/list?range_unit=days&range_value=28&signature=mozilla%3A%3Anet%3A%3AHttpBaseChannel%3A%3AOverrideSecurityInfo%28nsISupports%2A%29#tab-reports
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•